--- a/sourdough-starter-manifest.json
+++ b/sourdough-starter-manifest.json
@@ -742,12 +742,13 @@
       }
     },
     {
+      "incomplete_record": true,
       "filename": "sourdough-starter-23.mp4",
       "sequence": 23,
       "recipe": "arachnophobia",
-      "start_time": "2025-09-11T",
+      "start_time": "2025-09-12T20:38:50",
       "end_time": "2025-09-12T",
-      "first_active_time": "",
+      "first_active_time": "2025-09-13T10:12:25",
       "duration": "20h1m",
       "duration_seconds": 72079,
       "ratio": "1:5:5",
