--- a/sourdough-starter-manifest.json
+++ b/sourdough-starter-manifest.json
@@ -753,6 +753,19 @@
       "duration_seconds": 72079,
       "ratio": "1:5:5",
       "starter_grams": "10"
+    },
+    {
+      "incomplete_record": true,
+      "filename": "sourdough-starter-24.mp4",
+      "sequence": 24,
+      "recipe": "arachnophobia",
+      "start_time": "2025-09-13T21:07:31",
+      "end_time": "2025-09-13T",
+      "first_active_time": "",
+      "duration": "20h1m",
+      "duration_seconds": 72079,
+      "ratio": "1:3.1:3.1",
+      "starter_grams": "10"
     }
   ]
 }
