--- a/sourdough-starter-manifest.json
+++ b/sourdough-starter-manifest.json
@@ -716,7 +716,7 @@
       "recipe": "arachnophobia",
       "start_time": "2025-09-11T20:42:37",
       "end_time": "2025-09-12T16:43:56",
-      "first_active_time": "2025-09-12T05:40:26",
+      "lag_time": "2025-09-12T05:40:26",
       "duration": "20h1m",
       "duration_seconds": 72079,
       "ratio": "1:5.1:5.1",
@@ -748,7 +748,7 @@
       "recipe": "arachnophobia",
       "start_time": "2025-09-12T20:38:50",
       "end_time": "2025-09-12T",
-      "first_active_time": "2025-09-13T10:12:25",
+      "lag_time": "2025-09-13T10:12:25",
       "duration": "20h1m",
       "duration_seconds": 72079,
       "ratio": "1:5:5",
@@ -761,11 +761,24 @@
       "recipe": "arachnophobia",
       "start_time": "2025-09-13T21:07:31",
       "end_time": "2025-09-13T",
-      "first_active_time": "2025-09-1T06:21:21",
+      "lag_time": "2025-09-1T06:21:21",
       "duration": "20h1m",
       "duration_seconds": 72079,
       "ratio": "1:3.1:3.1",
       "starter_grams": "10"
+    },
+    {
+      "incomplete_record": true,
+      "filename": "sourdough-starter-25.mp4",
+      "sequence": 25,
+      "recipe": "arachnophobia",
+      "start_time": "2025-09-15T14:26:41",
+      "end_time": "2025-09-15T",
+      "lag_time": "",
+      "duration": "",
+      "duration_seconds": 72079,
+      "ratio": "1:10:10",
+      "starter_grams": "5"
     }
   ]
 }
