--- a/sourdough-starter-manifest.json
+++ b/sourdough-starter-manifest.json
@@ -27,7 +27,7 @@
       "sequence": 10,
       "recipe": "arachnophobia",
       "feeding_time_starts": "2025-08-20T22:20:19",
-      "end_time": "2025-08-21T04:53:01",
+      "peak_time": "2025-08-21T04:53:01",
       "duration": "6h32m",
       "duration_seconds": 23562,
       "environmental_data": {
@@ -55,7 +55,7 @@
       "sequence": 11,
       "recipe": "arachnophobia",
       "feeding_time_starts": "2025-08-21T16:27:53",
-      "end_time": "2025-08-22T03:50:00",
+      "peak_time": "2025-08-22T03:50:00",
       "duration_seconds": 40927,
       "duration": "11h22m",
       "environmental_data": {
@@ -83,7 +83,7 @@
       "sequence": 12,
       "recipe": "arachnophobia",
       "feeding_time_starts": "2025-08-22T14:31:28",
-      "end_time": "2025-08-22T21:28:01",
+      "peak_time": "2025-08-22T21:28:01",
       "duration": "6h56m",
       "duration_seconds": 24993,
       "notes": "ThermoPro was not measuring this starter during this run, it was measuring ovent temp while learning about the heatpad",
@@ -112,7 +112,7 @@
       "sequence": 14,
       "recipe": "arachnophobia",
       "feeding_time_starts": "2025-08-24T13:37:48",
-      "end_time": "2025-08-25T07:15:41",
+      "peak_time": "2025-08-25T07:15:41",
       "duration": "17h37m",
       "duration_seconds": 63473,
       "environmental_data": {
@@ -140,7 +140,7 @@
       "sequence": 15,
       "recipe": "arachnophobia",
       "feeding_time_starts": "2025-08-28T13:39:36",
-      "end_time": "2025-08-28T21:14:12",
+      "peak_time": "2025-08-28T21:14:12",
       "duration": "7h34m",
       "duration_seconds": 27276,
       "ratio": "1:1:1",
@@ -170,7 +170,7 @@
       "sequence": 15,
       "recipe": "arachnophobia",
       "feeding_time_starts": "2025-08-28T13:39:36",
-      "end_time": "2025-08-28T21:19:17",
+      "peak_time": "2025-08-28T21:19:17",
       "duration": "7h39m",
       "duration_seconds": 27581,
       "ratio": "1:2:2",
@@ -200,7 +200,7 @@
       "sequence": 15,
       "recipe": "arachnophobia",
       "feeding_time_starts": "2025-08-28T13:39:36",
-      "end_time": "2025-08-28T21:30:36",
+      "peak_time": "2025-08-28T21:30:36",
       "duration": "7h51m",
       "duration_seconds": 28260,
       "ratio": "1:3:3",
@@ -230,7 +230,7 @@
       "sequence": 15,
       "recipe": "arachnophobia",
       "feeding_time_starts": "2025-08-28T13:39:36",
-      "end_time": "2025-08-28T22:07:29",
+      "peak_time": "2025-08-28T22:07:29",
       "duration": "8h27m",
       "duration_seconds": 30473,
       "ratio": "1:5:5",
@@ -260,7 +260,7 @@
       "sequence": 15,
       "recipe": "arachnophobia",
       "feeding_time_starts": "2025-08-28T13:39:36",
-      "end_time": "2025-08-28T22:06:28",
+      "peak_time": "2025-08-28T22:06:28",
       "duration": "8h26m",
       "duration_seconds": 30412,
       "ratio": "1:7:7",
@@ -290,7 +290,7 @@
       "sequence": 15,
       "recipe": "arachnophobia",
       "feeding_time_starts": "2025-08-28T13:39:36",
-      "end_time": "2025-08-28T22:14:05",
+      "peak_time": "2025-08-28T22:14:05",
       "duration": "8h34m",
       "duration_seconds": 30869,
       "ratio": "1:10:10",
@@ -320,7 +320,7 @@
       "sequence": 17,
       "recipe": "arachnophobia",
       "feeding_time_starts": "2025-09-02T19:39:58",
-      "end_time": "2025-09-03T03:13:34",
+      "peak_time": "2025-09-03T03:13:34",
       "duration": "7h33m",
       "duration_seconds": 27216,
       "ratio": "1:1:1",
@@ -351,7 +351,7 @@
       "sequence": 17,
       "recipe": "arachnophobia",
       "feeding_time_starts": "2025-09-02T19:53:09",
-      "end_time": "2025-09-03T05:40:12",
+      "peak_time": "2025-09-03T05:40:12",
       "duration": "9h47m",
       "duration_seconds": 35223,
       "ratio": "1:3:3",
@@ -382,7 +382,7 @@
       "sequence": 17,
       "recipe": "arachnophobia",
       "feeding_time_starts": "2025-09-02T19:39:58",
-      "end_time": "2025-09-03T06:31:27",
+      "peak_time": "2025-09-03T06:31:27",
       "duration": "10h51m",
       "duration_seconds": 39089,
       "ratio": "1:5:5",
@@ -413,7 +413,7 @@
       "sequence": 17,
       "recipe": "arachnophobia",
       "feeding_time_starts": "2025-09-02T20:00:46",
-      "end_time": "2025-09-03T06:51:45",
+      "peak_time": "2025-09-03T06:51:45",
       "duration": "10h50m",
       "duration_seconds": 39059,
       "ratio": "1:7:7",
@@ -444,7 +444,7 @@
       "sequence": 17,
       "recipe": "arachnophobia",
       "feeding_time_starts": "2025-09-02T20:11:56",
-      "end_time": "2025-09-03T08:14:57",
+      "peak_time": "2025-09-03T08:14:57",
       "duration": "12h3m",
       "duration_seconds": 43381,
       "ratio": "1:10:10",
@@ -475,7 +475,7 @@
       "sequence": 19,
       "recipe": "arachnophobia",
       "feeding_time_starts": "2025-09-07T16:11:46",
-      "end_time": "2025-09-08T00:40:41",
+      "peak_time": "2025-09-08T00:40:41",
       "duration": "8h28m",
       "duration_seconds": 30535,
       "ratio": "1:1:1",
@@ -505,7 +505,7 @@
       "sequence": 19,
       "recipe": "arachnophobia",
       "feeding_time_starts": "2025-09-07T16:32:04",
-      "end_time": "2025-09-08T03:52:48",
+      "peak_time": "2025-09-08T03:52:48",
       "duration": "11h20m",
       "duration_seconds": 40844,
       "ratio": "1:7:7",
@@ -535,7 +535,7 @@
       "sequence": 19,
       "recipe": "arachnophobia",
       "feeding_time_starts": "2025-09-07T16:17:52",
-      "end_time": "2025-09-08T02:58:11",
+      "peak_time": "2025-09-08T02:58:11",
       "duration": "10h40m",
       "duration_seconds": 38419,
       "ratio": "1:3:3",
@@ -565,7 +565,7 @@
       "sequence": 19,
       "recipe": "arachnophobia",
       "feeding_time_starts": "2025-09-07T16:25:28",
-      "end_time": "2025-09-08T03:20:30",
+      "peak_time": "2025-09-08T03:20:30",
       "duration": "10h55m",
       "duration_seconds": 39302,
       "ratio": "1:5:5",
@@ -595,7 +595,7 @@
       "sequence": 19,
       "recipe": "arachnophobia",
       "feeding_time_starts": "2025-09-07T16:38:40",
-      "end_time": "2025-09-08T03:44:21",
+      "peak_time": "2025-09-08T03:44:21",
       "duration": "11h5m",
       "duration_seconds": 39941,
       "ratio": "1:10:10",
@@ -625,7 +625,7 @@
       "sequence": 18,
       "recipe": "arachnophobia",
       "feeding_time_starts": "2025-09-06T18:31:42",
-      "end_time": "2025-09-07T13:03:22",
+      "peak_time": "2025-09-07T13:03:22",
       "duration": "18h31m",
       "duration_seconds": 66700,
       "ratio": "1:5:5",
@@ -655,7 +655,7 @@
       "sequence": 20,
       "recipe": "arachnophobia",
       "feeding_time_starts": "2025-09-09T08:56:20",
-      "end_time": "2025-09-10T01:52:56",
+      "peak_time": "2025-09-10T01:52:56",
       "duration": "16h56m",
       "duration_seconds": 60996,
       "ratio": "1:10:10",
@@ -685,7 +685,7 @@
       "sequence": 21,
       "recipe": "arachnophobia",
       "feeding_time_starts": "2025-09-10T13:17:22",
-      "end_time": "2025-09-11T11:57:57",
+      "peak_time": "2025-09-11T11:57:57",
       "duration": "22h40m",
       "duration_seconds": 81635,
       "ratio": "1:10:10",
@@ -715,8 +715,8 @@
       "sequence": 22,
       "recipe": "arachnophobia",
       "feeding_time_starts": "2025-09-11T20:42:37",
-      "end_time": "2025-09-12T16:43:56",
-      "lag_time_ends": "2025-09-12T05:40:26",
+      "peak_time": "2025-09-12T16:43:56",
+      "active_time_starts": "2025-09-12T05:40:26",
       "duration": "20h1m",
       "duration_seconds": 72079,
       "ratio": "1:5.1:5.1",
@@ -747,38 +747,52 @@
       "sequence": 23,
       "recipe": "arachnophobia",
       "feeding_time_starts": "2025-09-12T20:38:50",
-      "end_time": "2025-09-12T",
-      "lag_time_ends": "2025-09-13T10:12:25",
+      "peak_time": "2025-09-12T",
+      "active_time_starts": "2025-09-13T10:12:25",
       "duration": "20h1m",
       "duration_seconds": 72079,
       "ratio": "1:5:5",
       "starter_grams": "10"
     },
     {
-      "incomplete_record": true,
       "filename": "sourdough-starter-24.mp4",
       "sequence": 24,
       "recipe": "arachnophobia",
       "feeding_time_starts": "2025-09-13T21:07:31",
-      "end_time": "2025-09-13T",
-      "lag_time_ends": "2025-09-1T06:21:21",
+      "active_time_starts": "2025-09-14T06:21:21",
+      "active_time_ends": "2025-09-14T16:55:46",
+      "peak_time": "2025-09-13T18:21:32",
       "duration": "20h1m",
       "duration_seconds": 72079,
       "ratio": "1:3.1:3.1",
       "starter_grams": "10"
     },
     {
-      "incomplete_record": true,
       "filename": "sourdough-starter-25.mp4",
       "sequence": 25,
       "recipe": "arachnophobia",
       "feeding_time_starts": "2025-09-15T14:26:41",
-      "lag_time_ends": "2025-09-16T01:20:40",
-      "end_time": "2025-09-15T",
+      "active_time_starts": "2025-09-16T01:20:40",
+      "peak_time": "2025-09-16T15:31:43",
+      "active_time_ends": "2025-09-16T17:30:03",
       "duration": "",
       "duration_seconds": 72079,
       "ratio": "1:10:10",
       "starter_grams": "5"
+    },
+    {
+      "incomplete_record": true,
+      "filename": "sourdough-starter-26.mp4",
+      "sequence": 26,
+      "recipe": "arachnophobia",
+      "feeding_time_starts": "2025-09-16T17:39:54",
+      "active_time_starts": "",
+      "peak_time": "",
+      "active_time_ends": "",
+      "duration": "",
+      "duration_seconds": 72079,
+      "ratio": "1:5:5",
+      "starter_grams": "10"
     }
   ]
 }
