--- a/sourdough-starter-manifest.json
+++ b/sourdough-starter-manifest.json
@@ -786,7 +786,7 @@
       "sequence": 26,
       "recipe": "arachnophobia",
       "feeding_start_time": "2025-09-16T17:39:54",
-      "active_start_time": "",
+      "active_start_time": "2025-09-17T03:30:18",
       "peak_time": "",
       "active_end_time": "",
       "duration": "",
