--- a/sourdough-starter-manifest.json
+++ b/sourdough-starter-manifest.json
@@ -655,7 +655,9 @@
       "sequence": 20,
       "recipe": "arachnophobia",
       "feeding_start_time": "2025-09-09T08:56:20",
+      "active_start_time": "2025-09-09T19:17:55",
       "peak_time": "2025-09-10T01:52:56",
+      "active_end_time": "2025-09-10T08:28:02",
       "duration": "16h56m",
       "duration_seconds": 60996,
       "ratio": "1:10:10",
