--- a/sourdough-starter-manifest.json
+++ b/sourdough-starter-manifest.json
@@ -744,28 +744,22 @@
       }
     },
     {
-      "incomplete_record": true,
-      "filename": "sourdough-starter-23.mp4",
       "sequence": 23,
       "recipe": "arachnophobia",
       "feeding_start_time": "2025-09-12T20:38:50",
-      "peak_time": "2025-09-12T",
       "active_start_time": "2025-09-13T10:12:25",
-      "duration": "20h1m",
-      "duration_seconds": 72079,
+      "peak_time": "2025-09-13T19:41:56",
+      "active_end_time": "2025-09-13T20:49:23",
       "ratio": "1:5:5",
       "starter_grams": "10"
     },
     {
-      "filename": "sourdough-starter-24.mp4",
       "sequence": 24,
       "recipe": "arachnophobia",
       "feeding_start_time": "2025-09-13T21:07:31",
       "active_start_time": "2025-09-14T06:21:21",
       "active_end_time": "2025-09-14T16:55:46",
       "peak_time": "2025-09-13T18:21:32",
-      "duration": "20h1m",
-      "duration_seconds": 72079,
       "ratio": "1:3.1:3.1",
       "starter_grams": "10"
     },
@@ -777,22 +771,17 @@
       "active_start_time": "2025-09-16T01:20:40",
       "peak_time": "2025-09-16T15:31:43",
       "active_end_time": "2025-09-16T17:30:03",
-      "duration": "",
-      "duration_seconds": 72079,
       "ratio": "1:10:10",
       "starter_grams": "5"
     },
     {
-      "incomplete_record": true,
       "filename": "sourdough-starter-26.mp4",
       "sequence": 26,
       "recipe": "arachnophobia",
       "feeding_start_time": "2025-09-16T17:39:54",
       "active_start_time": "2025-09-17T03:30:18",
-      "peak_time": "",
-      "active_end_time": "",
-      "duration": "",
-      "duration_seconds": 72079,
+      "peak_time": "2025-09-17T15:13:55",
+      "active_end_time": "2025-09-17T17:40:13",
       "ratio": "1:5:5",
       "starter_grams": "10"
     },
