--- a/sourdough-starter-manifest.json
+++ b/sourdough-starter-manifest.json
@@ -27,14 +27,18 @@
       "sequence": 10,
       "recipe": "arachnophobia",
       "feeding_start_time": "2025-08-20T22:20:19",
-      "peak_time": "2025-08-21T04:53:01"
+      "peak_time": "2025-08-21T04:53:01",
+      "active_start_time": "",
+      "active_end_time": ""
     },
     {
       "filename": "sourdough-starter-11.mp4",
       "sequence": 11,
       "recipe": "arachnophobia",
       "feeding_start_time": "2025-08-21T16:27:53",
-      "peak_time": "2025-08-22T03:50:00"
+      "peak_time": "2025-08-22T03:50:00",
+      "active_start_time": "",
+      "active_end_time": ""
     },
     {
       "filename": "sourdough-starter-12.mp4",
@@ -42,14 +46,18 @@
       "recipe": "arachnophobia",
       "feeding_start_time": "2025-08-22T14:31:28",
       "peak_time": "2025-08-22T21:28:01",
-      "notes": "ThermoPro was not measuring this starter during this run, it was measuring ovent temp while learning about the heatpad"
+      "notes": "ThermoPro was not measuring this starter during this run, it was measuring ovent temp while learning about the heatpad",
+      "active_start_time": "",
+      "active_end_time": ""
     },
     {
       "filename": "sourdough-starter-14.mp4",
       "sequence": 14,
       "recipe": "arachnophobia",
       "feeding_start_time": "2025-08-24T13:37:48",
-      "peak_time": "2025-08-25T07:15:41"
+      "peak_time": "2025-08-25T07:15:41",
+      "active_start_time": "",
+      "active_end_time": ""
     },
     {
       "filename": "sourdough-starter-15.mp4",
@@ -58,7 +66,9 @@
       "feeding_start_time": "2025-08-28T13:39:36",
       "peak_time": "2025-08-28T21:14:12",
       "ratio": "1:1:1",
-      "starter_grams": "8"
+      "starter_grams": "8",
+      "active_start_time": "",
+      "active_end_time": ""
     },
     {
       "filename": "sourdough-starter-15.mp4",
@@ -67,7 +77,9 @@
       "feeding_start_time": "2025-08-28T13:39:36",
       "peak_time": "2025-08-28T21:19:17",
       "ratio": "1:2:2",
-      "starter_grams": "8"
+      "starter_grams": "8",
+      "active_start_time": "",
+      "active_end_time": ""
     },
     {
       "filename": "sourdough-starter-15.mp4",
@@ -76,7 +88,9 @@
       "feeding_start_time": "2025-08-28T13:39:36",
       "peak_time": "2025-08-28T21:30:36",
       "ratio": "1:3:3",
-      "starter_grams": "8"
+      "starter_grams": "8",
+      "active_start_time": "",
+      "active_end_time": ""
     },
     {
       "filename": "sourdough-starter-15.mp4",
@@ -85,7 +99,9 @@
       "feeding_start_time": "2025-08-28T13:39:36",
       "peak_time": "2025-08-28T22:07:29",
       "ratio": "1:5:5",
-      "starter_grams": "8"
+      "starter_grams": "8",
+      "active_start_time": "",
+      "active_end_time": ""
     },
     {
       "filename": "sourdough-starter-15.mp4",
@@ -94,7 +110,9 @@
       "feeding_start_time": "2025-08-28T13:39:36",
       "peak_time": "2025-08-28T22:06:28",
       "ratio": "1:7:7",
-      "starter_grams": "8"
+      "starter_grams": "8",
+      "active_start_time": "",
+      "active_end_time": ""
     },
     {
       "filename": "sourdough-starter-15.mp4",
@@ -103,7 +121,9 @@
       "feeding_start_time": "2025-08-28T13:39:36",
       "peak_time": "2025-08-28T22:14:05",
       "ratio": "1:10:10",
-      "starter_grams": "8"
+      "starter_grams": "8",
+      "active_start_time": "",
+      "active_end_time": ""
     },
     {
       "filename": "sourdough-starter-17.mp4",
@@ -113,7 +133,9 @@
       "peak_time": "2025-09-03T03:13:34",
       "ratio": "1:1:1",
       "starter_grams": "8",
-      "notes": "Multiple starter ratios tested simultaneously with temperature monitoring"
+      "notes": "Multiple starter ratios tested simultaneously with temperature monitoring",
+      "active_start_time": "",
+      "active_end_time": ""
     },
     {
       "filename": "sourdough-starter-17.mp4",
@@ -123,7 +145,9 @@
       "peak_time": "2025-09-03T05:40:12",
       "ratio": "1:3:3",
       "starter_grams": "8",
-      "notes": "Multiple starter ratios tested simultaneously with temperature monitoring"
+      "notes": "Multiple starter ratios tested simultaneously with temperature monitoring",
+      "active_start_time": "",
+      "active_end_time": ""
     },
     {
       "filename": "sourdough-starter-17.mp4",
@@ -133,7 +157,9 @@
       "peak_time": "2025-09-03T06:31:27",
       "ratio": "1:5:5",
       "starter_grams": "8",
-      "notes": "Multiple starter ratios tested simultaneously with temperature monitoring"
+      "notes": "Multiple starter ratios tested simultaneously with temperature monitoring",
+      "active_start_time": "",
+      "active_end_time": ""
     },
     {
       "filename": "sourdough-starter-17.mp4",
@@ -143,7 +169,9 @@
       "peak_time": "2025-09-03T06:51:45",
       "ratio": "1:7:7",
       "starter_grams": "8",
-      "notes": "Multiple starter ratios tested simultaneously with temperature monitoring"
+      "notes": "Multiple starter ratios tested simultaneously with temperature monitoring",
+      "active_start_time": "",
+      "active_end_time": ""
     },
     {
       "filename": "sourdough-starter-17.mp4",
@@ -153,7 +181,9 @@
       "peak_time": "2025-09-03T08:14:57",
       "ratio": "1:10:10",
       "starter_grams": "8",
-      "notes": "Multiple starter ratios tested simultaneously with temperature monitoring"
+      "notes": "Multiple starter ratios tested simultaneously with temperature monitoring",
+      "active_start_time": "",
+      "active_end_time": ""
     },
     {
       "filename": "sourdough-starter-19.mp4",
@@ -162,7 +192,9 @@
       "feeding_start_time": "2025-09-07T16:11:46",
       "peak_time": "2025-09-08T00:40:41",
       "ratio": "1:1:1",
-      "starter_grams": "8"
+      "starter_grams": "8",
+      "active_start_time": "",
+      "active_end_time": ""
     },
     {
       "filename": "sourdough-starter-19.mp4",
@@ -171,7 +203,9 @@
       "feeding_start_time": "2025-09-07T16:32:04",
       "peak_time": "2025-09-08T03:52:48",
       "ratio": "1:7:7",
-      "starter_grams": "8"
+      "starter_grams": "8",
+      "active_start_time": "",
+      "active_end_time": ""
     },
     {
       "filename": "sourdough-starter-19.mp4",
@@ -180,7 +214,9 @@
       "feeding_start_time": "2025-09-07T16:17:52",
       "peak_time": "2025-09-08T02:58:11",
       "ratio": "1:3:3",
-      "starter_grams": "8"
+      "starter_grams": "8",
+      "active_start_time": "",
+      "active_end_time": ""
     },
     {
       "filename": "sourdough-starter-19.mp4",
@@ -189,7 +225,9 @@
       "feeding_start_time": "2025-09-07T16:25:28",
       "peak_time": "2025-09-08T03:20:30",
       "ratio": "1:5:5",
-      "starter_grams": "8"
+      "starter_grams": "8",
+      "active_start_time": "",
+      "active_end_time": ""
     },
     {
       "filename": "sourdough-starter-19.mp4",
@@ -198,7 +236,9 @@
       "feeding_start_time": "2025-09-07T16:38:40",
       "peak_time": "2025-09-08T03:44:21",
       "ratio": "1:10:10",
-      "starter_grams": "8"
+      "starter_grams": "8",
+      "active_start_time": "",
+      "active_end_time": ""
     },
     {
       "filename": "sourdough-starter-18.mp4",
@@ -207,7 +247,9 @@
       "feeding_start_time": "2025-09-06T18:31:42",
       "peak_time": "2025-09-07T13:03:22",
       "ratio": "1:5:5",
-      "starter_grams": "10"
+      "starter_grams": "10",
+      "active_start_time": "",
+      "active_end_time": ""
     },
     {
       "filename": "sourdough-starter-20.mp4",
@@ -227,7 +269,9 @@
       "feeding_start_time": "2025-09-10T13:17:22",
       "peak_time": "2025-09-11T11:57:57",
       "ratio": "1:10:10",
-      "starter_grams": "5"
+      "starter_grams": "5",
+      "active_start_time": "",
+      "active_end_time": ""
     },
     {
       "filename": "sourdough-starter-22.mp4",
@@ -237,7 +281,8 @@
       "peak_time": "2025-09-12T16:43:56",
       "active_start_time": "2025-09-12T05:40:26",
       "ratio": "1:5.1:5.1",
-      "starter_grams": "10"
+      "starter_grams": "10",
+      "active_end_time": ""
     },
     {
       "sequence": 23,
